--- a/vercel-deploy-service/package.json
+++ b/vercel-deploy-service/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b"
+    "dev": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
