--- a/vercel-deploy-service/package.json
+++ b/vercel-deploy-service/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "build": "tsc -b"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
     "dev": "node dist/index.js"
   },
   "keywords": [],
